samples/_failures_safe/1761327086_d4b3d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71a3d88d.c: In function ‘main’:
./samples/SAFE/__tmp_71a3d88d.c:154:16: error: missing terminating " character
  154 |         printf("%-12s %-15s %-6d %
      |                ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_71a3d88d.c:154:9: error: expected expression at end of input
  154 |         printf("%-12s %-15s %-6d %
      |         ^~~~~~
./samples/SAFE/__tmp_71a3d88d.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_71a3d88d.c:154:9: error: expected declaration or statement at end of input
